--- a/_quarto.yml
+++ b/_quarto.yml
@@ -19,7 +19,7 @@ format-links: false
 format:
   html:
     theme: minty
-    css: styles.css
+    #css: styles.css
     link-external-newwindow: true
     canonical-url: true
   pdf: default
