--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,9 @@
-/.quarto/
+*.pdf
+template.typ
+tmp.*
 _site/
-index.tex
-index.html
-.resume_env/
+/.quarto/
+.Rproj.user
+.Renviron
+.DS_Store
+air.toml
