--- a/assets/yml/education.yml
+++ b/assets/yml/education.yml
@@ -1,10 +1,10 @@
 phd:
-  title: Ph.D. in Physics
-  location: Zürich, Switzerland
-  date: 1905
-  description: University of Zürich
+  title: Ph.D. in Computer Science and Technology
+  location: Madrid, Spain
+  date: 2021
+  description: University Carlos III of Madrid
 master:
-  title: Master of Science
-  location: Zürich, Switzerland
-  date: 1896 - 1900
-  description: ETH
+  title: Master of Computer Science and Technology
+  location: Madrid, Spain
+  date: 2017
+  description: University Carlos III of Madrid
