--- a/_quarto.yml
+++ b/_quarto.yml
@@ -9,7 +9,7 @@ project:
     - "RESUME.qmd"
 
 website:
-  title: "Mi Página Personal"
+  title: "My personal webpage"
   navbar:
     left:
       - href: index.qmd
