--- a/_quarto.yml
+++ b/_quarto.yml
@@ -13,7 +13,7 @@ website:
   navbar:
     left:
       - href: index.qmd
-        text: "Inicio"
+        text: "Home"
       - href: RESUME.qmd
         text: "CV"
   page-footer:
