--- a/_quarto.yml
+++ b/_quarto.yml
@@ -23,8 +23,12 @@ website:
     border: true
     background: dark
     center: 
-      - text: "<b>Download PDF</b>"
+      - text: "<b>Download presentation</b>"
         href: /index.pdf
+      - text: "<b>Download CV</b>"
+        href: /RESUME.pdf
+      - text: "<b>Download Publications</b>"
+        href: /publications.pdf
 
 format-links: false
 format:
